2.3/src/task2/sevice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    app: nginx
  ports:
  - name: https
    port: 80
    targetPort: 80
  type: ClusterIP
