2.3/src/task2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: shulgatyy.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-nginx
            port: 
              number: 80
  tls:
    - hosts:
      - shulgatyy.ru
      secretName: sertificate
